--- a/styles.css
+++ b/styles.css
@@ -1,19 +1,79 @@
+@font-face { font-family: PtSerif;
+src: url('fonts/PTSerif-Regular.ttf'); }
+
+/*variables */
+:root{
+    --accentColor: #9F0000;
+    }
+
 body{
     height: 100vh;
     padding: 0;
     margin: 0;
     background-color: #36454F;
     box-sizing: border-box;
+    font-family: PtSerif, sans-serif;
 }
 
 .header {
-background-color: #9F0000
+    background-color: var(--accentColor);
+    display: grid;
+    grid-template-columns: 2fr 8f;
+    grid-template-rows: 8vh 8vh;
+    padding-left: 1rem;
 }
+
+.header h1 {
+    padding: 0;
+    margin: 0;
+    align-self: center;
+    font-size: 5vh;
+    grid-row: 1/2;
+    grid-column: 1/2;
+}
+
+.header button {
+    grid-row: 2/3;
+    grid-column: 1/2;
+    width: 12vw;
+    height: 5vh;
+    font-size: 2vh;
+}
+
+.header img {
+    margin: 0;
+    padding: 0;
+    grid-row: 1/3;
+    grid-column: 2/3;
+    height: 16vh;
+    justify-self: end;
+}
+
+
+
+.footer {
+    display: flex;
+    margin-top: 1rem;
+    flex-direction: column;
+    align-items: center;
+    justify-content: end;
+}
+
+.footer p {
+    margin: 0;
+    color: #ffffff;
+}
+
+#footer-email {
+    margin-top: 0.2rem;
+    border-bottom: 1px solid #ffffff;
+}
+
 .book {
     color: #FFFFFF;
 }
 
-.book button, .newBookBtn {
+.book button, .newBookBtn, #submitBtn {
     background-color: transparent;
     border: 0.1em solid #FFFFFF;
     border-radius: 0.12em;
@@ -22,28 +82,69 @@ background-color: #9F0000
     text-align: center;
     transition: all 0.2s;
     color: #FFFFFF;
+    cursor: pointer;
 }
 
-.book button:hover, .newBookBtn:hover {
+.book button:hover, .newBookBtn:hover, #submitBtn:hover{
     color: #000000;
     background-color: #FFFFFF;
+    cursor: pointer;
 }
 
 .container {
+    margin-top: 1rem;
     border: 1px solid red;
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+
 }
 
 .book {
     border: 1px solid black;
-    margin: 10px;
+    margin: 0.2rem 0 0.2rem 0.2rem;
+    padding: 1rem;
+    font-size: max(1.5vw, 1.5vh)
+
+}
+
+#newBookDialog {
+    background-color: var(--accentColor);
+}
+
+#newBookForm ul {
+    list-style: none;
+}
+
+#submitBtn {
+    height: 3vh;
+}
+
+#formCancel {
+    background-color: transparent;
+    border: none;
+    cursor: pointer;
+    margin: 0;
+    padding: 0;
 }
 
 .readBtn {
     display: block;
+    height: max(3vh, 20px);
+    width: max(11vw, 110px)
 }
 
+.removeBtn {
+    cursor: pointer;
+    height: 3vh;
+    border: 2px solid black;
+    display: flex;
+    background-color: white;
+}
+
+.btnDiv {
+    display: flex;
+    justify-content: space-between;
+}
 /*toggle styling WORK IN PROGRESS
     /*The switch - the box around the slider 
     .switch {
